deployment/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: otuken3d-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: otuken3d-tls
    hosts:
    - "api.otuken3d.ai"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "api.otuken3d.ai"
    tls:
      httpsRedirect: true
